...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

        <EditText
                android:id="@+id/edit_account_name"
                style="@style/EditorEditText"
                android:layout_weight="0"
                android:hint="@string/name"/>

        <EditText
                android:id="@+id/edit_account_start_sum"
                style="@style/EditorEditText.Sum"
                android:layout_weight="0"
                android:hint="@string/start_sum"/>

        <TextView
                style="@style/EditorTextView"
...
