...
              android:id="@+id/edit_op_root"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <DatePicker
            android:id="@+id/edit_op_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:layout_marginTop="0dp"
...
